--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 </head>
 <body>
   <h1>Will you be my valentine, Ashmita?</h1>
-  <img id="cat-proposal" src="https://placekitten.com/200/300" alt="Cat with Flower">
+    <img id="cat-proposal" src="https://cdn.pixabay.com/photo/2020/01/16/17/02/cat-4770202_1280.png" alt="Cat with Flower">
+r">
   <div id="buttons">
     <button onclick="yesResponse()">Yes</button>
     <button onclick="noResponse()">No</button>
